--- a/index.html
+++ b/index.html
@@ -1,46 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>A Place to test your skills.</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">  
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-        <link href="https://fonts.googleapis.com/css?family=Arimo|Cousine|Lato|Noto+Sans|Roboto" rel="stylesheet">
-
-        <script>
-            $(document).ready( function() {
-                $("#onsignup").on("click", function() {
-                    $("#content").load("signup.html");
-                        });
+<head>
+    <meta charset="utf-8">
+    <title>Welcome</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $("#sin").click(function(){
+                $("#sinup").fadeToggle("fast");
+                $("#right-overlay").fadeToggle("fast");
             });
-        </script>
-
-
-    </head>
-    <body>
-        <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#Ncollapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">Online Test Application</a>
-                </div>
-                <div class="collapse navbar-collapse" id="Ncollapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a></li>
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#" id="onsignup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <div class="container" id="content"></div>
-    </body>
+            $("#sup").click(function(){
+                $("#sinup").fadeToggle("fast");
+                $("#right-overlay").fadeToggle("fast");
+            });
+        });
+        $( "#dta" ).change(function() {
+            $.alert({
+                title: 'Congrats!',
+                content: 'Registration Succesfull!',
+            });
+        });
+    </script>
+</head>
+<body>
+    <div class="container">
+        <div class="sign-up" id="sinup">
+            <form action="reg.jsp" method="POST">
+                <span class="header">Sign Up</span>
+                <input type="text" name="uid" required maxlength="30" placeholder="Username"/>
+                <input type="password" required name="pwd" minlength="6" maxlength="30" placeholder="Password"/>
+                <input type="email" required name="mail" maxlength="45" placeholder="Email Id"/>
+                <input type="text" name="phn" maxlength="10" minlength="10" placeholder="Mobile Number"/>
+                <input type="submit" value="Sign Up"/>
+            </form>
+        </div>
+        <div class="sign-in" id="sinin">
+            <form action="#" method="POST">
+                <span class="header">Sign In</span>
+                <input type="text" name="uid" required maxlength="30" placeholder="Username"/>
+                <input type="password" required name="pwd" minlength="6" maxlength="30" placeholder="Password"/>
+                <input type="submit" value="Sign In"/>
+            </form> 
+        </div>
+        <div id="left-overlay" class="hidden">
+            <h1>Welcome Back</h1>
+            <h3>Hi if this is your first time here then please sign up here</h3>
+            <button class="button" id="sup">Sign Up</button>
+        </div>
+        <div id="right-overlay" class="hidden">
+            <h1>Join Us</h1>
+            <h3>If you already have an account then click here to SignIn</h3>
+            <button class="button" id="sin">Sign In</button>
+        </div>
+    </div>
+    <input type="text" name="data" id="dta" value="default"/>
+</body>
 </html>
