added the questions page

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <script>
         $(document).ready(function(){
             $("#sin").click(function(){
-                $("#sinup").fadeToggle("fast");
-                $("#right-overlay").fadeToggle("fast");
+                $("#sinup").fadeToggle("800");
+                $("#right-overlay").fadeToggle("800");
             });
             $("#sup").click(function(){
-                $("#sinup").fadeToggle("fast");
-                $("#right-overlay").fadeToggle("fast");
+                $("#sinup").fadeToggle("800");
+                $("#right-overlay").fadeToggle("800");
             });
         });
         $( "#dta" ).change(function() {
