--- a/check/ques.html
+++ b/check/ques.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>test</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="qmain.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script >
     function submit()
     {
-        var date1 = new Date();
-        alert('time up your test will be submited');
+        // var date1 = new Date();
+        alert('times up your test will be submited');
         document.forms["ques"].submit();
     }
     setTimeout(submit,1000*60*60+1000);
@@ -55,7 +55,7 @@ $(window).on('load', function () {
 </head>
 <body>
     <div class='nav'>
-        <span>Timer:00:</span><span id="time">00:00</span>
+        <span>Timer:</span><span id="time">00:00</span>
     </div>
     <div class='left'>
         <button>1</button>
