removed servlet program

--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
             <button class="button" id="sin">Sign In</button>
         </div>
     </div>
-    <input type="text" name="data" id="dta" value="default"/>
+    <input type="hidden" name="data" id="dta" value="default"/>
 </body>
 </html>
