--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </form>
         </div>
         <div class="sign-in" id="sinin">
-            <form action="#" method="POST">
+            <form action="lvalidate.jsp" method="POST">
                 <span class="header">Sign In</span>
                 <input type="text" name="uid" required maxlength="30" placeholder="Username"/>
                 <input type="password" required name="pwd" minlength="6" maxlength="30" placeholder="Password"/>
@@ -44,12 +44,12 @@
             </form> 
         </div>
         <div id="left-overlay" class="hidden">
-            <h1>Welcome Back</h1>
+            <h1>Join Us</h1>
             <h3>Hi if this is your first time here then please sign up here</h3>
             <button class="button" id="sup">Sign Up</button>
         </div>
         <div id="right-overlay" class="hidden">
-            <h1>Join Us</h1>
+            <h1>Welcome Back</h1>
             <h3>If you already have an account then click here to SignIn</h3>
             <button class="button" id="sin">Sign In</button>
         </div>
